[tool.poetry]
name = "mixs_fresh_start"
version = "0.1.0"
description = "copy from github"
authors = ["Mark Andrew Miller <mam@lbl.gov>"]
license = "MIT"
readme = "README.md"
include = ["README.md", "src/mixs_fresh_start/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
deepdiff = { extras = ["cli"], version = "^6.2.3" }
daff = "^1.3.46"


[tool.poetry.group.dev.dependencies]
linkml = "^1.4.4"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"
cruft = "^2.12.0"
click_log = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]

[tool.poetry.scripts]
combine_any_tsvs = "mixs_fresh_start.datamodel.combine_any_tsvs:combine_tsvs"
compare_headers = "mixs_fresh_start.datamodel.compare_headers:cli"
find_multi_pairings = "mixs_fresh_start.datamodel.find_multi_pairings:main"
tsv_key_management = "mixs_fresh_start.datamodel.tsv_key_management:cli"
xlsx_tab_to_tsv = "mixs_fresh_start.datamodel.xlsx_tab_to_tsv:cli"
drop_then_remove_dupes = "mixs_fresh_start.datamodel.drop_then_remove_dupes:main"

